avcodec/dvbsubdec: fix ignoring blank frame by updating got_output

fix ticket 3737

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>