libavcodec/x86/videodsp_init.c
@@ -1,25 +1,27 @@
 /*
+ * Copyright (C) 2002-2012 Michael Niedermayer
  * Copyright (C) 2012 Ronald S. Bultje
  *
- * This file is part of Libav.
+ * This file is part of FFmpeg.
  *
- * Libav is free software; you can redistribute it and/or
+ * FFmpeg is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
  *
- * Libav is distributed in the hope that it will be useful,
+ * FFmpeg is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
- * License along with Libav; if not, write to the Free Software
+ * License along with FFmpeg; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  */
 
 #include "config.h"
 #include "libavutil/attributes.h"
+#include "libavutil/avassert.h"
 #include "libavutil/common.h"
 #include "libavutil/cpu.h"
 #include "libavutil/mem.h"
@@ -28,11 +30,11 @@
 #include "libavcodec/videodsp.h"
 
 #if HAVE_YASM
-typedef void emu_edge_vfix_func(uint8_t *dst, const uint8_t *src,
-                                x86_reg dst_stride, x86_reg src_stride,
+typedef void emu_edge_vfix_func(uint8_t *dst, x86_reg dst_stride,
+                                const uint8_t *src, x86_reg src_stride,
                                 x86_reg start_y, x86_reg end_y, x86_reg bh);
-typedef void emu_edge_vvar_func(uint8_t *dst, const uint8_t *src,
-                                x86_reg dst_stride, x86_reg src_stride,
+typedef void emu_edge_vvar_func(uint8_t *dst, x86_reg dst_stride,
+                                const uint8_t *src, x86_reg src_stride,
                                 x86_reg start_y, x86_reg end_y, x86_reg bh,
                                 x86_reg w);
 
@@ -115,15 +117,34 @@ static emu_edge_hfix_func *hfixtbl_mmx[11] = {
 };
 #endif
 extern emu_edge_hvar_func ff_emu_edge_hvar_mmx;
+extern emu_edge_hfix_func ff_emu_edge_hfix4_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix6_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix8_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix10_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix12_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix14_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix16_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix18_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix20_mmxext;
+extern emu_edge_hfix_func ff_emu_edge_hfix22_mmxext;
+#if ARCH_X86_32
+static emu_edge_hfix_func *hfixtbl_mmxext[11] = {
+    ff_emu_edge_hfix2_mmx,     ff_emu_edge_hfix4_mmxext,  ff_emu_edge_hfix6_mmxext,
+    ff_emu_edge_hfix8_mmxext,  ff_emu_edge_hfix10_mmxext, ff_emu_edge_hfix12_mmxext,
+    ff_emu_edge_hfix14_mmxext, ff_emu_edge_hfix16_mmxext, ff_emu_edge_hfix18_mmxext,
+    ff_emu_edge_hfix20_mmxext, ff_emu_edge_hfix22_mmxext
+};
+#endif
+extern emu_edge_hvar_func ff_emu_edge_hvar_mmxext;
 extern emu_edge_hfix_func ff_emu_edge_hfix16_sse2;
 extern emu_edge_hfix_func ff_emu_edge_hfix18_sse2;
 extern emu_edge_hfix_func ff_emu_edge_hfix20_sse2;
 extern emu_edge_hfix_func ff_emu_edge_hfix22_sse2;
 static emu_edge_hfix_func *hfixtbl_sse2[11] = {
-    ff_emu_edge_hfix2_mmx,  ff_emu_edge_hfix4_mmx,  ff_emu_edge_hfix6_mmx,
-    ff_emu_edge_hfix8_mmx,  ff_emu_edge_hfix10_mmx, ff_emu_edge_hfix12_mmx,
-    ff_emu_edge_hfix14_mmx, ff_emu_edge_hfix16_sse2, ff_emu_edge_hfix18_sse2,
-    ff_emu_edge_hfix20_sse2, ff_emu_edge_hfix22_sse2
+    ff_emu_edge_hfix2_mmx,     ff_emu_edge_hfix4_mmxext,  ff_emu_edge_hfix6_mmxext,
+    ff_emu_edge_hfix8_mmxext,  ff_emu_edge_hfix10_mmxext, ff_emu_edge_hfix12_mmxext,
+    ff_emu_edge_hfix14_mmxext, ff_emu_edge_hfix16_sse2,   ff_emu_edge_hfix18_sse2,
+    ff_emu_edge_hfix20_sse2,   ff_emu_edge_hfix22_sse2
 };
 extern emu_edge_hvar_func ff_emu_edge_hvar_sse2;
 
@@ -141,14 +162,16 @@ static av_always_inline void emulated_edge_mc(uint8_t *dst, const uint8_t *src,
     x86_reg start_y, start_x, end_y, end_x, src_y_add = 0, p;
 
     if (!w || !h)
-         return;
+        return;
 
     if (src_y >= h) {
-        src  -= src_y * src_stride;
-        src_y = src_y_add = h - 1;
+        src -= src_y*src_stride;
+        src_y_add = h - 1;
+        src_y     = h - 1;
     } else if (src_y <= -block_h) {
-        src  -= src_y*src_stride;
-        src_y = src_y_add = 1 - block_h;
+        src -= src_y*src_stride;
+        src_y_add = 1 - block_h;
+        src_y     = 1 - block_h;
     }
     if (src_x >= w) {
         src   += w - 1 - src_x;
@@ -162,18 +185,17 @@ static av_always_inline void emulated_edge_mc(uint8_t *dst, const uint8_t *src,
     start_x = FFMAX(0, -src_x);
     end_y   = FFMIN(block_h, h-src_y);
     end_x   = FFMIN(block_w, w-src_x);
-    assert(start_x < end_x && block_w > 0);
-    assert(start_y < end_y && block_h > 0);
+    av_assert2(start_x < end_x && block_w > 0);
+    av_assert2(start_y < end_y && block_h > 0);
 
     // fill in the to-be-copied part plus all above/below
     src += (src_y_add + start_y) * src_stride + start_x;
     w = end_x - start_x;
     if (w <= 22) {
-        vfix_tbl[w - 1](dst + start_x, src,
-                        dst_stride, src_stride,
+        vfix_tbl[w - 1](dst + start_x, dst_stride, src, src_stride,
                         start_y, end_y, block_h);
     } else {
-        v_extend_var(dst + start_x, src, dst_stride, src_stride,
+        v_extend_var(dst + start_x, dst_stride, src, src_stride,
                      start_y, end_y, block_h, w);
     }
 
@@ -212,7 +234,18 @@ static av_noinline void emulated_edge_mc_mmx(uint8_t *buf, const uint8_t *src,
                      hfixtbl_mmx, &ff_emu_edge_hvar_mmx);
 }
 
-static av_noinline void emulated_edge_mc_sse(uint8_t * buf,const uint8_t *src,
+static av_noinline void emulated_edge_mc_mmxext(uint8_t *buf, const uint8_t *src,
+                                                ptrdiff_t buf_stride,
+                                                ptrdiff_t src_stride,
+                                                int block_w, int block_h,
+                                                int src_x, int src_y, int w, int h)
+{
+    emulated_edge_mc(buf, src, buf_stride, src_stride, block_w, block_h,
+                     src_x, src_y, w, h, vfixtbl_mmx, &ff_emu_edge_vvar_mmx,
+                     hfixtbl_mmxext, &ff_emu_edge_hvar_mmxext);
+}
+
+static av_noinline void emulated_edge_mc_sse(uint8_t *buf, const uint8_t *src,
                                              ptrdiff_t buf_stride,
                                              ptrdiff_t src_stride,
                                              int block_w, int block_h,
@@ -220,7 +253,7 @@ static av_noinline void emulated_edge_mc_sse(uint8_t * buf,const uint8_t *src,
 {
     emulated_edge_mc(buf, src, buf_stride, src_stride, block_w, block_h,
                      src_x, src_y, w, h, vfixtbl_sse, &ff_emu_edge_vvar_sse,
-                     hfixtbl_mmx, &ff_emu_edge_hvar_mmx);
+                     hfixtbl_mmxext, &ff_emu_edge_hvar_mmxext);
 }
 #endif
 
@@ -231,8 +264,8 @@ static av_noinline void emulated_edge_mc_sse2(uint8_t *buf, const uint8_t *src,
                                               int src_x, int src_y, int w,
                                               int h)
 {
-    emulated_edge_mc(buf, src, buf_stride, src_stride, block_w, block_h, src_x,
-                     src_y, w, h, vfixtbl_sse, &ff_emu_edge_vvar_sse,
+    emulated_edge_mc(buf, src, buf_stride, src_stride, block_w, block_h,
+                     src_x, src_y, w, h, vfixtbl_sse, &ff_emu_edge_vvar_sse,
                      hfixtbl_sse2, &ff_emu_edge_hvar_sse2);
 }
 #endif /* HAVE_YASM */
@@ -255,6 +288,10 @@ av_cold void ff_videodsp_init_x86(VideoDSPContext *ctx, int bpc)
 #endif /* ARCH_X86_32 */
     if (EXTERNAL_MMXEXT(cpu_flags)) {
         ctx->prefetch = ff_prefetch_mmxext;
+#if ARCH_X86_32
+        if (bpc <= 8)
+            ctx->emulated_edge_mc = emulated_edge_mc_mmxext;
+#endif /* ARCH_X86_32 */
     }
 #if ARCH_X86_32
     if (EXTERNAL_SSE(cpu_flags) && bpc <= 8) {
